chore: update todo pagination
