# docs/swagger.json
@@ -94,6 +94,27 @@
                 }
             }
         },
+        "/user/list": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get the API's user list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "User list endpoint",
+                "responses": {}
+            }
+        },
         "/user/profile": {
             "get": {
                 "security": [
